# docgen

./: pyproject.toml
src/docgen/: AiDocGenerator.py  DeclarationInfo.py  Filters.py  docgen.py
