[project]
name = "docgen"
version = "0.1.0"
description = "Generate your api docs from your sources"
authors = [
    {name = "Wolfgang Gehrhardt",email = "gehwolf@freenet.de"}
]
license = {text = "GPL"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "docgen", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
